--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 html	{
 	font-size: 62.5%;
 	height: 100%;	
+	scroll-behavior: smooth;
 }
 
 @media only screen and (max-width: 56.25em) {
@@ -212,7 +213,15 @@ body	{
 /* Typography */
 
 .heading-primary {
-	font-weight: 300;
-	font-size: 6rem;
 	
+	font-size: 5rem;
+	border-radius: 5rem;
+	padding: 1.5rem;
+	font-weight: 300;
+	background-color: rgba(108, 122, 137, 1);
+	color: #fff;
+	text-decoration: none;
+	outline: none;
+	border: none;
+	box-shadow: 0 3rem 6rem rgba(0, 0, 0, .5); 
 }
